--- a/about/index.html
+++ b/about/index.html
@@ -39,7 +39,7 @@
       "@type": "ProfessionalService",
       "name": "Sidhi & Associates",
       "alternateName": "Sidhi and Associates Chartered Accountants",
-      "url": "https://sidhiandassociates.github.io",
+      "url": "https://sidhiandassociates.com/",
       "logo": "https://sidhiandassociates.com/sidhi.png",
       "description": "ICAI Registered Chartered Accountants providing expert Tax, GST, Audit, and Company Formation services across India since 2015",
       "telephone": "+917889257045",
@@ -62,7 +62,7 @@
         "addressCountry": "IN"
       },
       "sameAs": [
-        "https://sidhiandassociates.github.io"
+        "https://sidhiandassociates.com/"
       ]
     }
     </script>
@@ -76,7 +76,7 @@
         "@type": "ListItem",
         "position": 1,
         "name": "Home",
-        "item": "https://sidhiandassociates.github.io"
+        "item": "https://sidhiandassociates.com/"
       },{
         "@type": "ListItem",
         "position": 2,
