--- a/bangalore/index.html
+++ b/bangalore/index.html
@@ -600,8 +600,8 @@
     <nav>
         <div class="container">
             <a href="/">← Home</a>
-            <a href="#services">Services</a>
-            <a href="#why-us">Why Us</a>
+            <a href="/services/">Services</a>
+            <a href="/why-us/">Why Us</a>
             <a href="#areas">Service Areas</a>
             <a href="#contact">Contact</a>
         </div>
@@ -614,7 +614,7 @@
             <p>Your trusted Chartered Accountant for Tax Filing, GST Compliance, Startup Services, Company Incorporation & Business Advisory in Bangalore</p>
             <div class="hero-buttons">
                 <a href="tel:+917889257045" class="btn-primary">📞 Call Now</a>
-                <a href="#services" class="btn-secondary">Our Services</a>
+                <a href="/services/" class="btn-secondary">Our Services</a>
             </div>
         </div>
     </section>
@@ -865,8 +865,8 @@
                     <h3>Quick Links</h3>
                     <ul>
                         <li><a href="/">Home</a></li>
-                        <li><a href="#services">Services</a></li>
-                        <li><a href="#why-us">Why Us</a></li>
+                        <li><a href="/services/">Services</a></li>
+                        <li><a href="/why-us/">Why Us</a></li>
                         <li><a href="#areas">Service Areas</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
@@ -875,11 +875,11 @@
                 <div class="footer-section">
                     <h3>Our Services</h3>
                     <ul>
-                        <li><a href="#services">Startup Services</a></li>
-                        <li><a href="#services">Tax Planning & Filing</a></li>
-                        <li><a href="#services">GST Compliance</a></li>
-                        <li><a href="#services">Company Incorporation</a></li>
-                        <li><a href="#services">Audit Services</a></li>
+                        <li><a href="/services/">Startup Services</a></li>
+                        <li><a href="/services/tax-planning-filing/">Tax Planning & Filing</a></li>
+                        <li><a href="/services/gst-compliance/">GST Compliance</a></li>
+                        <li><a href="/services/company-incorporation/">Company Incorporation</a></li>
+                        <li><a href="/services/audit-services/">Audit Services</a></li>
                     </ul>
                 </div>
 
@@ -889,7 +889,7 @@
                         <li><a href="/panchkula/">Panchkula Office</a></li>
                         <li><a href="/zirakpur/">Zirakpur Office</a></li>
                         <li><a href="/bareilly/">Bareilly Office</a></li>
-                        <li><a href="/">Ghaziabad Office</a></li>
+                        <li><a href="/ghaziabad/">Ghaziabad Office</a></li>
                     </ul>
                 </div>
 
