--- a/calculator/income-tax-calculator/index.html
+++ b/calculator/income-tax-calculator/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="/sidhi.png" type="image/png" />
     <title>Income Tax Calculator - Old vs New Regime Comparison | Free Tool</title>
     <meta name="description" content="Free Income Tax Calculator. Compare old vs new tax regime. Calculate tax liability, deductions, take-home salary. By Sidhi & Associates CAs.">
-    <link rel="canonical" href="https://sidhiandassociates.github.io/calculator/income-tax-calculator/">
+    <link rel="canonical" href="https://sidhiandassociates.com/calculator/income-tax-calculator/">
     
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
