--- a/services/audit-services/index.html
+++ b/services/audit-services/index.html
@@ -47,7 +47,7 @@
         "name": "Sidhi & Associates",
         "telephone": "+917889257045",
         "email": "siddhiandassociatess@gmail.com",
-        "url": "https://sidhiandassociates.github.io",
+        "url": "https://sidhiandassociates.com/",
         "priceRange": "₹₹₹",
         "address": {
           "@type": "PostalAddress",
@@ -133,7 +133,7 @@
           "@type": "ListItem",
           "position": 1,
           "name": "Home",
-          "item": "https://sidhiandassociates.github.io"
+          "item": "https://sidhiandassociates.com/"
         },
         {
           "@type": "ListItem",
