--- a/services/gst-registration/index.html
+++ b/services/gst-registration/index.html
@@ -14,7 +14,7 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://sidhiandassociates.github.io/services/gst-registration/">
+    <meta property="og:url" content="https://sidhiandassociates.com/services/gst-registration/">
     <meta property="og:title" content="GST Registration Online India - Get GSTIN in 3-7 Days">
     <meta property="og:description" content="Professional GST Registration Services. Fast, Hassle-Free, Expert Support. 2000+ GST Registrations Done. ICAI Registered CAs. Starting ₹3,000. Call +91 78892 57045">
     
@@ -612,7 +612,7 @@
     <header>
         <div class="container">
             <div class="header-content">
-                <a href="https://sidhiandassociates.github.io/" class="logo">
+                <a href="/" class="logo">
                     <img src="/sidhi.png" alt="Sidhi & Associates Logo" class="logo-img">
                     <div class="logo-text">
                         <h1>Sidhi & Associates</h1>
@@ -629,19 +629,19 @@
 
     <nav>
         <div class="container">
-            <a href="https://sidhiandassociates.github.io/">← Back to Home</a>
+            <a href="/">← Back to Home</a>
             <div class="nav-links">
                 <a href="/services/">Services</a>
-                <a href="#pricing">Pricing</a>
-                <a href="#process">Process</a>
-                <a href="#faq">FAQ</a>
+                <a href="/calculator/">Calculators</a>
+                <a href="/why-us/">Why Us</a>
+                <a href="/faq/">FAQ</a>
             </div>
         </div>
     </nav>
 
     <div class="breadcrumb">
         <div class="container">
-            <a href="https://sidhiandassociates.github.io/">Home</a> / <a href="https://sidhiandassociates.github.io/#services">Services</a> / <span>GST Registration</span>
+            <a href="/">Home</a> / <a href="/services/">Services</a> / <span>GST Registration</span>
         </div>
     </div>
 
@@ -916,29 +916,29 @@
                 <div class="footer-section">
                     <h3>Quick Links</h3>
                     <ul>
-                        <li><a href="https://sidhiandassociates.github.io/">Home</a></li>
-                        <li><a href="https://sidhiandassociates.github.io/services/">All Services</a></li>
-                        <li><a href="https://sidhiandassociates.github.io/#why-us">Why Choose Us</a></li>
-                        <li><a href="https://sidhiandassociates.github.io/#contact">Contact</a></li>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/services/">All Services</a></li>
+                        <li><a href="/why-us/">Why Choose Us</a></li>
+                        <li><a href="/blog/">Blogs</a></li>
                     </ul>
                 </div>
 
                 <div class="footer-section">
                     <h3>Our Services</h3>
                     <ul>
-                        <li><a href="https://sidhiandassociates.github.io/services/tax-planning-filing/">Tax Planning & Filing</a></li>
-                        <li><a href="https://sidhiandassociates.github.io/services/gst-compliance/">GST Compliance</a></li>
-                        <li><a href="https://sidhiandassociates.github.io/services/gst-return-filing/">GST Return Filing</a></li>
-                        <li><a href="https://sidhiandassociates.github.io/services/company-incorporation/">Company Incorporation</a></li>
+                        <li><a href="/services/tax-planning-filing/">Tax Planning & Filing</a></li>
+                        <li><a href="/services/gst-compliance/">GST Compliance</a></li>
+                        <li><a href="/services/gst-return-filing/">GST Return Filing</a></li>
+                        <li><a href="/services/company-incorporation/">Company Incorporation</a></li>
                     </ul>
                 </div>
 
                 <div class="footer-section">
                     <h3>GST Services</h3>
                     <ul>
-                        <li><a href="#services">New GST Registration</a></li>
-                        <li><a href="#services">Composition Scheme</a></li>
-                        <li><a href="#services">GST Modification</a></li>
+                        <li><a href="/services/gst-registration/">New GST Registration</a></li>
+                        <li><a href="/services/">Composition Scheme</a></li>
+                        <li><a href="/services/">GST Modification</a></li>
                         <li><a href="#pricing">View Pricing</a></li>
                     </ul>
                 </div>
