--- a/services/gst-refund/index.html
+++ b/services/gst-refund/index.html
@@ -14,7 +14,7 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://sidhiandassociates.github.io/services/gst-refund/">
+    <meta property="og:url" content="https://sidhiandassociates.com/services/gst-refund/">
     <meta property="og:title" content="GST Refund Services India - Get Your Money Back Fast">
     <meta property="og:description" content="₹50Cr+ Refunds Processed | 95% Success Rate | Free Assessment | Expert CAs | Call Now +91 78892 57045">
     
@@ -844,7 +844,7 @@
     <header>
         <div class="container">
             <div class="header-content">
-                <a href="https://sidhiandassociates.github.io/" class="logo">
+                <a href="/" class="logo">
                     <img src="/sidhi.png" alt="Sidhi & Associates Logo" class="logo-img">
                     <div class="logo-text">
                         <h1>Sidhi & Associates</h1>
@@ -861,19 +861,19 @@
 
     <nav>
         <div class="container">
-            <a href="https://sidhiandassociates.github.io/">← Back to Home</a>
+            <a href="/">← Back to Home</a>
             <div class="nav-links">
-                <a href="#calculator">Refund Calculator</a>
-                <a href="#pricing">Pricing</a>
-                <a href="#testimonials">Reviews</a>
-                <a href="#faq">FAQ</a>
+                <a href="/calculator/">Calculators</a>
+                <a href="/services/">Services</a>
+                <a href="/why-us/">Why Choose Us</a>
+                <a href="/faq/">FAQ</a>
             </div>
         </div>
     </nav>
 
     <div class="breadcrumb">
         <div class="container">
-            <a href="https://sidhiandassociates.github.io/">Home</a> / <a href="https://sidhiandassociates.github.io/#services">Services</a> / <span>GST Refund</span>
+            <a href="/">Home</a> / <a href="/services/">Services</a> / <span>GST Refund</span>
         </div>
     </div>
 
@@ -1349,20 +1349,20 @@
                 <div class="footer-section">
                     <h3>Quick Links</h3>
                     <ul>
-                        <li><a href="https://sidhiandassociates.github.io/">Home</a></li>
-                        <li><a href="https://sidhiandassociates.github.io/#services">All Services</a></li>
-                        <li><a href="https://sidhiandassociates.github.io/#why-us">Why Choose Us</a></li>
-                        <li><a href="https://sidhiandassociates.github.io/#contact">Contact</a></li>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/services/">All Services</a></li>
+                        <li><a href="/why-us/">Why Choose Us</a></li>
+                        <li><a href="/blog/">Blogs</a></li>
                     </ul>
                 </div>
 
                 <div class="footer-section">
                     <h3>Our Services</h3>
                     <ul>
-                        <li><a href="https://sidhiandassociates.github.io/services/tax-planning-filing/">Tax Planning & Filing</a></li>
-                        <li><a href="https://sidhiandassociates.github.io/services/gst-compliance/">GST Compliance</a></li>
-                        <li><a href="https://sidhiandassociates.github.io/services/gst-return-filing/">GST Return Filing</a></li>
-                        <li><a href="https://sidhiandassociates.github.io/services/gst-registration/">GST Registration</a></li>
+                        <li><a href="/services/tax-planning-filing/">Tax Planning & Filing</a></li>
+                        <li><a href="/services/gst-compliance/">GST Compliance</a></li>
+                        <li><a href="/services/gst-return-filing/">GST Return Filing</a></li>
+                        <li><a href="/services/gst-registration/">GST Registration</a></li>
                     </ul>
                 </div>
 
