--- a/ghaziabad/index.html
+++ b/ghaziabad/index.html
@@ -225,7 +225,7 @@
           "@type": "ListItem",
           "position": 1,
           "name": "Home",
-          "item": "https://sidhiandassociates.github.io"
+          "item": "https://sidhiandassociates.com/"
         },
         {
           "@type": "ListItem",
